chore: align env setup and fix Study B sycophancy metrics

--- a/Assignment 2/Uni-setup/notebooks/study_a_analysis.ipynb
+++ b/Assignment 2/Uni-setup/notebooks/study_a_analysis.ipynb
@@ -133,12 +133,11 @@
         "# Extract CIs if available\n",
         "lower_bounds = []\n",
         "upper_bounds = []\n",
-        "for pos, (_, row) in enumerate(df_sorted.iterrows()):\n",
+        "for idx, row in df_sorted.iterrows():\n",
         "    ci = row.get(\"faithfulness_gap_ci\", {})\n",
         "    if ci:\n",
-        "        # Use positional index to avoid issues with non-sequential dataframe indices\n",
-        "        lower_bounds.append(gaps[pos] - ci.get(\"lower\", 0))\n",
-        "        upper_bounds.append(ci.get(\"upper\", 0) - gaps[pos])\n",
+        "        lower_bounds.append(gaps[df_sorted.index.get_loc(idx)] - ci.get(\"lower\", 0))\n",
+        "        upper_bounds.append(ci.get(\"upper\", 0) - gaps[df_sorted.index.get_loc(idx)])\n",
         "    else:\n",
         "        lower_bounds.append(0)\n",
         "        upper_bounds.append(0)\n",
