chore: remove legacy setups and fix CI plotting indices

--- a/Assignment 2/reliable_clinical_benchmark/Mac-setup/notebooks/study_c_analysis.ipynb
+++ b/Assignment 2/reliable_clinical_benchmark/Mac-setup/notebooks/study_c_analysis.ipynb
@@ -147,11 +147,12 @@
         "# Extract CIs if available\n",
         "lower_bounds = []\n",
         "upper_bounds = []\n",
-        "for idx, row in df_sorted.iterrows():\n",
+        "for pos, (_, row) in enumerate(df_sorted.iterrows()):\n",
         "    ci = row.get(\"entity_recall_ci\", {})\n",
         "    if ci:\n",
-        "        lower_bounds.append(recalls[df_sorted.index.get_loc(idx)] - ci.get(\"lower\", 0))\n",
-        "        upper_bounds.append(ci.get(\"upper\", 0) - recalls[df_sorted.index.get_loc(idx)])\n",
+        "        # Use positional index to avoid issues with non-sequential dataframe indices\n",
+        "        lower_bounds.append(recalls[pos] - ci.get(\"lower\", 0))\n",
+        "        upper_bounds.append(ci.get(\"upper\", 0) - recalls[pos])\n",
         "    else:\n",
         "        lower_bounds.append(0)\n",
         "        upper_bounds.append(0)\n",
