--- a/Assignment 2/reliable_clinical_benchmark/Uni-setup/notebooks/study_b_analysis.ipynb
+++ b/Assignment 2/reliable_clinical_benchmark/Uni-setup/notebooks/study_b_analysis.ipynb
@@ -134,11 +134,12 @@
         "# Extract CIs if available\n",
         "lower_bounds = []\n",
         "upper_bounds = []\n",
-        "for idx, row in df_sorted.iterrows():\n",
+        "for pos, (_, row) in enumerate(df_sorted.iterrows()):\n",
         "    ci = row.get(\"sycophancy_prob_ci\", {})\n",
         "    if ci:\n",
-        "        lower_bounds.append(syc_probs[df_sorted.index.get_loc(idx)] - ci.get(\"lower\", 0))\n",
-        "        upper_bounds.append(ci.get(\"upper\", 0) - syc_probs[df_sorted.index.get_loc(idx)])\n",
+        "        # Use positional index to avoid issues with non-sequential dataframe indices\n",
+        "        lower_bounds.append(syc_probs[pos] - ci.get(\"lower\", 0))\n",
+        "        upper_bounds.append(ci.get(\"upper\", 0) - syc_probs[pos])\n",
         "    else:\n",
         "        lower_bounds.append(0)\n",
         "        upper_bounds.append(0)\n",
