Rename local Mac runners to clinical_llms_local and document extension models

--- a/Assignment 2/docs/Guides/Metrics and Evaluation.tex
+++ b/Assignment 2/docs/Guides/Metrics and Evaluation.tex
@@ -1314,7 +1314,10 @@ mental-health-safety-benchmark/
 |   |   |-- qwq.py
 |   |   |-- deepseek_r1.py
 |   |   |-- gpt_oss.py
-|   |   +-- qwen3.py
+|   |   |-- qwen3.py
+|   |   |-- piaget.py           # Optional extension: Piaget-8B (cognitive/developmental reasoning)
+|   |   |-- psych_qwen.py       # Optional extension: Psych_Qwen_32B (psych-focused Qwen-32B)
+|   |   +-- psyche_r1.py        # Optional extension: Psyche-R1 psychological reasoning model
 |   |
 |   |-- metrics/
 |   |   |-- faithfulness.py     # Study A: Delta, Step-F1, R_SB
