Update leaderboard ordering and deployment strategy for all eight models

--- a/Assignment 2/docs/Guides/Metrics and Evaluation.tex
+++ b/Assignment 2/docs/Guides/Metrics and Evaluation.tex
@@ -1597,8 +1597,8 @@ Qwen3-8B & 1,898 & $\sim$4 prompts/min & 8 hours & 16GB \\
 
 \textbf{Deployment Strategy}: 
 \begin{itemize}
-    \item 8B models (PsyLLM, Qwen3-8B): Single RTX 4090 (24GB)
-    \item 32B models (QwQ-32B, DeepSeek-R1-32B): A100 80GB or quantised on 2$\times$ RTX 4090
+    \item 8B models (PsyLLM, Qwen3-8B, Piaget-8B): Single RTX 4090 (24GB)
+    \item 32B models (QwQ-32B, DeepSeek-R1-32B, Psych\_Qwen\_32B, Psyche-R1): A100 80GB or quantised on 2$\times$ RTX 4090
     \item 120B model (GPT-OSS-120B): A100 80GB with 8-bit quantisation or H100
 \end{itemize}
 
