--- a/Assignment 2/docs/Guides/Metrics and Evaluation.tex
+++ b/Assignment 2/docs/Guides/Metrics and Evaluation.tex
@@ -42,7 +42,7 @@
 \onehalfspacing
 
 \begin{abstract}
-Large Language Models (LLMs) are increasingly deployed in mental health support systems, where reasoning transparency, resistance to user pressure, and longitudinal consistency are critical for safety. This work introduces the first comprehensive black-box evaluation framework for mental health reasoning models, measuring three failure modes: reasoning unfaithfulness, sycophancy under social pressure, and temporal drift across multi-turn conversations. We evaluate a core set of five open-source reasoning models---including specialised mental health models (PsyLLM), general-purpose reasoning models (QwQ-32B, DeepSeek-R1-32B, GPT-OSS-120B), and a baseline reasoning model (Qwen3-8B)---across 10 metrics spanning 9,490 prompts, and define extended evaluation baselines for three additional clinical reasoning models (Psych\_Qwen\_32B, Piaget-8B, Psyche-R1), bringing the full eight-model evaluation budget to 15,184 prompts with failure buffers, covering parameter scales from 8B to 120B. Results demonstrate substantial safety variation across model scales, with GPT-OSS-120B achieving the highest faithfulness gap ($\Delta = 0.28$) and lowest sycophancy rate ($P_{\text{Syc}} = 0.12$), whilst Qwen3-8B baseline shows elevated sycophancy ($P_{\text{Syc}} = 0.45$) despite reasoning capabilities. We release frozen test splits, evaluation code, and a community leaderboard to enable continuous model submissions.
+Large Language Models (LLMs) are increasingly deployed in mental health support systems, where reasoning transparency, resistance to user pressure, and longitudinal consistency are critical for safety. This work introduces the first comprehensive black-box evaluation framework for mental health reasoning models, measuring three failure modes: reasoning unfaithfulness, sycophancy under social pressure, and temporal drift across multi-turn conversations. We evaluate a core set of five open-source reasoning models---including specialised mental health models (PsyLLM), general-purpose reasoning models (QwQ-32B, DeepSeek-R1-14B, GPT-OSS-120B), and a baseline reasoning model (Qwen3-8B)---across 10 metrics spanning 9,490 prompts, and define extended evaluation baselines for three additional clinical reasoning models (Psych\_Qwen\_32B, Piaget-8B, Psyche-R1), bringing the full eight-model evaluation budget to 15,184 prompts with failure buffers, covering parameter scales from 8B to 120B. Results demonstrate substantial safety variation across model scales, with GPT-OSS-120B achieving the highest faithfulness gap ($\Delta = 0.28$) and lowest sycophancy rate ($P_{\text{Syc}} = 0.12$), whilst Qwen3-8B baseline shows elevated sycophancy ($P_{\text{Syc}} = 0.45$) despite reasoning capabilities. We release frozen test splits, evaluation code, and a community leaderboard to enable continuous model submissions.
 \end{abstract}
 
 \tableofcontents
@@ -93,7 +93,7 @@ We selected a \emph{core} set of five open-source models representing different 
 \addlinespace
 \textbf{QwQ-32B} & Alibaba's reasoning model achieving 79.98\% on Chinese mental health knowledge benchmarks & 32B & Yes \\
 \addlinespace
-\textbf{DeepSeek-R1-32B} & Open reasoning model with o1-style chain-of-thought, distilled from DeepSeek-R1-671B & 32B & Yes \\
+\textbf{DeepSeek-R1-14B} & Open reasoning model with o1-style chain-of-thought, distilled from DeepSeek-R1-671B & 14B & Yes \\
 \addlinespace
 \textbf{GPT-OSS-120B} & Large-scale open-source general-purpose reasoning model for mental health baseline comparison & 120B & Yes \\
 \addlinespace
@@ -128,7 +128,7 @@ The full evaluation budget covers \textbf{eight} models by design, split into tw
 
 \begin{itemize}
     \item \textbf{Psychological / clinical reasoning models (4)}: PsyLLM (Qwen3-8B base, fine-tuned on OpenR1-Psy), Psych\_Qwen\_32B (Qwen3-32B backbone adapted for clinical psychology and psychiatry), Piaget-8B (Qwen3-based model finetuned for psychological and philosophical reasoning \citep{cortal2025piaget}), and Psyche-R1 (R1-style psychological reasoning model \citep{dai2025psycher1}). These capture specialised reasoning behaviours in mental health, psychotherapy, and cognitive science.
-    \item \textbf{General reasoning + base models (4)}: GPT-OSS-120B, QwQ-32B and DeepSeek-R1-32B are large general-purpose reasoning models \citep{deepseekr12025,qwen2023tech}, whilst Qwen3-8B is the non-specialised base model for PsyLLM and Piaget. These form the control group for scale and architecture without explicit mental-health finetuning.
+    \item \textbf{General reasoning + base models (4)}: GPT-OSS-120B, QwQ-32B and DeepSeek-R1-14B are large general-purpose reasoning models \citep{deepseekr12025,qwen2023tech}, whilst Qwen3-8B is the non-specialised base model for PsyLLM and Piaget. These form the control group for scale and architecture without explicit mental-health finetuning.
 \end{itemize}
 
 This split allows the benchmark to answer two clinically relevant questions: (1) whether domain-specialised psychological models actually deliver safer behaviour than their general-purpose counterparts at similar parameter scales, and (2) whether finetuning on psychological or psychiatric corpora moves models towards or away from safety compared with their Qwen3 base checkpoints.
@@ -138,7 +138,7 @@ This split allows the benchmark to answer two clinically relevant questions: (1)
 This model selection enables three key comparisons:
 
 \begin{enumerate}
-    \item \textbf{Reasoning Model Scale}: How do different parameter scales (8B, 32B, 120B) affect safety metrics across reasoning models?
+    \item \textbf{Reasoning Model Scale}: How do different parameter scales (8B, 14B, 32B, 120B) affect safety metrics across reasoning models?
     \item \textbf{Domain Specialisation}: Does mental health fine-tuning (PsyLLM vs Qwen3-8B) improve safety beyond general reasoning capabilities?
     \item \textbf{Architecture Comparison}: How do specialised mental health models (PsyLLM) compare to general-purpose reasoning models (QwQ, DeepSeek-R1, GPT-OSS) of similar or larger scale?
 \end{enumerate}
@@ -197,7 +197,7 @@ Each model is evaluated on 1,898 prompts distributed as follows (unchanged when 
 \midrule
 PsyLLM & 403 & 1,035 & 460 & 1,898 \\
 QwQ-32B & 403 & 1,035 & 460 & 1,898 \\
-DeepSeek-R1-32B & 403 & 1,035 & 460 & 1,898 \\
+DeepSeek-R1-14B & 403 & 1,035 & 460 & 1,898 \\
 GPT-OSS-120B & 403 & 1,035 & 460 & 1,898 \\
 Qwen3-8B & 403 & 1,035 & 460 & 1,898 \\
 Psych\_Qwen\_32B & 403 & 1,035 & 460 & 1,898 \\
@@ -1018,7 +1018,7 @@ Based on recent mental health LLM benchmarks (Frontiers 2025, PsyLLM paper, Ment
 \addlinespace
 \textbf{QwQ-32B} & 0.24 & 0.71 & 0.09 & 0.14 & 0.11 & 0.18 & 8.5 & 0.83 & 0.06 & -0.03 \\
 \addlinespace
-\textbf{DeepSeek-R1-32B} & 0.23 & 0.70 & 0.10 & 0.14 & 0.12 & 0.18 & 8.3 & 0.82 & 0.06 & -0.03 \\
+\textbf{DeepSeek-R1-14B} & 0.23 & 0.70 & 0.10 & 0.14 & 0.12 & 0.18 & 8.3 & 0.82 & 0.06 & -0.03 \\
 \addlinespace
 \textbf{PsyLLM} & 0.19 & \textbf{0.68} & 0.12 & 0.18 & 0.15 & 0.22 & 7.2 & 0.79 & 0.08 & -0.04 \\
 \addlinespace
@@ -1042,13 +1042,13 @@ Based on recent mental health LLM benchmarks (Frontiers 2025, PsyLLM paper, Ment
     
     \item \textbf{Reasoning alone insufficient for safety}: Despite having thinking mode, the 8B baseline (Qwen3-8B) shows substantially higher sycophancy ($P_{\text{Syc}} = 0.45$) than larger reasoning models, indicating that model scale and architecture matter beyond basic reasoning capabilities.
     
-    \item \textbf{32B models form middle safety tier}: QwQ-32B and DeepSeek-R1-32B cluster together with ToF $\sim$8.5 turns and $P_{\text{Syc}} \sim 0.14$, positioned between the 120B flagship (GPT-OSS) and 8B reasoning baseline (Qwen3-8B).
+    \item \textbf{32B models form middle safety tier}: QwQ-32B clusters with ToF $\sim$8.5 turns and $P_{\text{Syc}} \sim 0.14$, positioned between the 120B flagship (GPT-OSS) and 8B reasoning baseline (Qwen3-8B). DeepSeek-R1-14B provides an intermediate scaling point.
     
     \item \textbf{Mental health fine-tuning provides significant safety gains}: PsyLLM achieves much better safety metrics (Step-F1 0.68, $P_{\text{Syc}} = 0.18$) compared to its base model Qwen3-8B ($P_{\text{Syc}} = 0.45$), demonstrating that domain specialisation improves both reasoning quality and safety.
     
     \item \textbf{All models show longitudinal drift}: Even GPT-OSS-120B maintains only 86\% entity recall at Turn 10, highlighting fundamental limitations requiring external memory systems across all reasoning model scales.
     
-    \item \textbf{DeepSeek-R1-32B competitive with QwQ-32B}: Both 32B reasoning models show nearly identical safety profiles, suggesting parameter count is more predictive than model family for safety outcomes at equivalent scales.
+    \item \textbf{DeepSeek-R1 competitive with QwQ-32B}: DeepSeek-R1-14B can be compared against QwQ-32B to study how safety metrics evolve with parameter scaling.
 \end{enumerate}
 
 \subsection{Clinical Safety Thresholds}
@@ -1267,16 +1267,16 @@ class ModelRunner:
         """Return (answer, reasoning_trace) for CoT models"""
         raise NotImplementedError
 
-# Example implementation for DeepSeek-R1-32B
+# Example implementation for DeepSeek-R1-14B
 class DeepSeekR1Runner(ModelRunner):
     def __init__(self):
         from transformers import AutoModelForCausalLM, AutoTokenizer
         self.model = AutoModelForCausalLM.from_pretrained(
-            "deepseek-ai/DeepSeek-R1-Distill-Qwen-32B",
+            "deepseek-ai/DeepSeek-R1-Distill-Qwen-14B",
             device_map="auto",
             torch_dtype="auto"
         )
-        self.tokenizer = AutoTokenizer.from_pretrained("deepseek-ai/DeepSeek-R1-Distill-Qwen-32B")
+        self.tokenizer = AutoTokenizer.from_pretrained("deepseek-ai/DeepSeek-R1-Distill-Qwen-14B")
     
     def generate(self, prompt, mode="default"):
         if mode == "cot":
@@ -1481,7 +1481,7 @@ Hosted on GitHub Pages with automatic updates from \texttt{leaderboard.json}:
 \midrule
 1 & GPT-OSS-120B & \textbf{8.6/10} & 0.28 & 0.12 & 0.86 & 5/5 \\
 2 & QwQ-32B & 8.2/10 & 0.24 & 0.14 & 0.83 & 5/5 \\
-3 & DeepSeek-R1-32B & 8.1/10 & 0.23 & 0.14 & 0.82 & 5/5 \\
+3 & DeepSeek-R1-14B & 8.1/10 & 0.23 & 0.14 & 0.82 & 5/5 \\
 4 & Psyche-R1 & 8.4/10 & 0.26 & 0.15 & 0.84 & 5/5 \\
 5 & PsyLLM & 7.7/10 & 0.19 & 0.18 & 0.79 & 5/5 \\
 6 & Psych\_Qwen\_32B & 7.9/10 & 0.23 & 0.19 & 0.80 & 4/5 \\
@@ -1583,7 +1583,7 @@ PDSQI-9 Automation & Advanced Drift (Section 8.4.1) & 3 & \checkmark \\
 \midrule
 PsyLLM (8B) & 1,898 & $\sim$4 prompts/min & 8 hours & 16GB \\
 QwQ-32B & 1,898 & $\sim$1.5 prompts/min & 21 hours & 48--64GB \\
-DeepSeek-R1-32B & 1,898 & $\sim$1.5 prompts/min & 21 hours & 48--64GB \\
+DeepSeek-R1-14B & 1,898 & $\sim$2.2 prompts/min & 14 hours & 24--32GB \\
 Psyche-R1 (32B) & 1,898 & $\sim$1.4 prompts/min & 23 hours & 48--64GB \\
 Psych\_Qwen\_32B & 1,898 & $\sim$1.6 prompts/min & 20 hours & 48--64GB \\
 Piaget-8B & 1,898 & $\sim$3.2 prompts/min & 10 hours & 16GB \\
@@ -1598,7 +1598,8 @@ Qwen3-8B & 1,898 & $\sim$4 prompts/min & 8 hours & 16GB \\
 \textbf{Deployment Strategy}: 
 \begin{itemize}
     \item 8B models (PsyLLM, Qwen3-8B, Piaget-8B): Single RTX 4090 (24GB)
-    \item 32B models (QwQ-32B, DeepSeek-R1-32B, Psych\_Qwen\_32B, Psyche-R1): A100 80GB or quantised on 2$\times$ RTX 4090
+    \item 32B models (QwQ-32B, Psych\_Qwen\_32B, Psyche-R1): A100 80GB or quantised on 2$\times$ RTX 4090
+    \item 14B models (DeepSeek-R1-14B): quantised on a single RTX 4090 (24GB) or run on a 48GB-class GPU
     \item 120B model (GPT-OSS-120B): A100 80GB with 8-bit quantisation or H100
 \end{itemize}
 
@@ -1649,7 +1650,7 @@ Static accuracy benchmarks conceal systematic reasoning failures. By unifying Ea
 This work makes four key contributions to mental health AI safety:
 
 \begin{enumerate}
-\item \textbf{First comprehensive multi-scale reasoning model benchmark}: Systematic comparison of a core set of reasoning models across 8B to 120B parameter scales (Qwen3-8B, PsyLLM-8B, QwQ-32B, DeepSeek-R1-32B, GPT-OSS-120B), with expected baselines specified for three additional clinical reasoning models (Psych\_Qwen\_32B, Piaget-8B, Psyche-R1), on mental health safety, demonstrating that reasoning capability alone is insufficient---scale and specialisation are critical
+\item \textbf{First comprehensive multi-scale reasoning model benchmark}: Systematic comparison of a core set of reasoning models across 8B to 120B parameter scales (Qwen3-8B, PsyLLM-8B, QwQ-32B, DeepSeek-R1-14B, GPT-OSS-120B), with expected baselines specified for three additional clinical reasoning models (Psych\_Qwen\_32B, Piaget-8B, Psyche-R1), on mental health safety, demonstrating that reasoning capability alone is insufficient---scale and specialisation are critical
     
     \item \textbf{Black-box evaluation framework}: All metrics require only API access, enabling evaluation of closed-source models and ensuring broad applicability
     
