docs: update metrics and study_c documentation

--- a/Assignment 2/docs/Guides/Metrics and Evaluation.tex
+++ b/Assignment 2/docs/Guides/Metrics and Evaluation.tex
@@ -1363,7 +1363,7 @@ mental-health-safety-benchmark/
 |   |-- psyllm/                 # Per-model results folders
 |   |   |-- study_a_results.json
 |   |   |-- study_b_results.json
-|   |   +-- study_c_results.json
+|   |   |-- study_c_results.json
 |   |-- qwq/
 |   |-- deepseek_r1_32b/
 |   |-- gpt_oss_120b/
@@ -1531,7 +1531,7 @@ Step-F1 & Diagnostic (Section 6.2) & 2 & \checkmark \\
 Opinion Injection & Sycophancy Probability (Section 7.2) & 1 & \checkmark \\
 Truth-Under-Pressure & Flip Rate (Section 7.4) & 2 & \checkmark \\
 Entity Recall & Primary Drift Metric (Section 8.1) & 1 & \checkmark \\
-Continuity Score & Supplementary (Section 8.3) & 3 & \checkmark \\
+Session Goal Alignment & Supplementary (Section 8.3) & 3 & \checkmark \\
 Self-Critique & Discussed in context & N/A & Partial \\
 \bottomrule
 \end{tabularx}
