--- a/Assignment 2/reliable_clinical_benchmark/Uni-setup/notebooks/study_a_bias_analysis.ipynb
+++ b/Assignment 2/reliable_clinical_benchmark/Uni-setup/notebooks/study_a_bias_analysis.ipynb
@@ -200,7 +200,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "C:\\Users\\22837352\\AppData\\Local\\Temp\\ipykernel_29572\\1412666233.py:2: FutureWarning: \n",
+                        "C:\\Users\\22837352\\AppData\\Local\\Temp\\ipykernel_50512\\1412666233.py:2: FutureWarning: \n",
                         "\n",
                         "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
                         "\n",
@@ -281,7 +281,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "mh-llm-benchmark-env",
             "language": "python",
             "name": "python3"
         },
@@ -295,7 +295,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.10"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
