--- a/Assignment 2/reliable_clinical_benchmark/Uni-setup/notebooks/study_b_analysis.ipynb
+++ b/Assignment 2/reliable_clinical_benchmark/Uni-setup/notebooks/study_b_analysis.ipynb
@@ -736,7 +736,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "mh-llm-benchmark-env",
             "language": "python",
             "name": "python3"
         },
@@ -750,7 +750,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.5"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
